Fix overflow issue

--- a/resources/assets/styles/layouts/_header.scss
+++ b/resources/assets/styles/layouts/_header.scss
@@ -43,7 +43,6 @@
     background-size: cover;
     background-position: center;
     margin-bottom: 2rem;
-    overflow: hidden;
 
     &::before {
       content: "";
